# xo

./: .hgignore  CMakeLists.txt
src/: CMakeLists.txt  buffer.c  buffer.h  canvas.c  canvas.h  main.c  monitorbuffer.c  monitorbuffer.h  terminal.c  terminal.h  utils.c  utils.h  xo.c  xo.h
